[package]
name = "brik_rv32"
version = "0.2.2"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "RISC-V Assembly Encoder / Decoder."
repository = "https://github.com/rakivo/brik_rv32"
include = ["Cargo.toml", "README.md", "src/*"]
categories = [
    "compilers",
    "encoding",
    "hardware-support",
    "parser-implementations",
]
keywords = ["riscv", "assembly", "encode", "decode", "asm"]
readme = "README.md"
edition = "2021"

[dependencies]
